# AdventOfCode

2024/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  meson.build
2024/Sources/: BridgeRepair.cc  BridgeRepair.hh  CeresSearch.cc  CeresSearch.hh  DiskFragmenter.cc  DiskFragmenter.hh  GuardGallivant.cc  GuardGallivant.hh  HistorianHysteria.cc  HistorianHysteria.hh  HoofIt.cc  HoofIt.hh  MullItOver.cc  MullItOver.hh  PrintQueue.cc  PrintQueue.hh  RedNosedReports.cc  RedNosedReports.hh  ResonantCollinearity.cc  ResonantCollinearity.hh  main.cc  meson.build
2024/Tests/: BridgeRepairTests.cc  CeresSearchTests.cc  DiskFragmenterTests.cc  GuardGallivantTests.cc  HistorianHysteriaTests.cc  HoofItTests.cc  MullItOverTests.cc  PrintQueueTests.cc  RedNosedReportsTests.cc  ResonantCollinearityTests.cc  meson.build
